fixed some spacing bugs. fixed focus padding bug

--- a/sass/controls/_tree.scss
+++ b/sass/controls/_tree.scss
@@ -11,7 +11,7 @@
     color: $tree-link-color;
     @include font-size(16);
     font-weight: 400;
-    padding: 5px;
+    padding: 8px 8px 6px 5px;
     text-decoration: none;
 
     &:visited {
@@ -19,18 +19,13 @@
     }
 
     &:hover {
-      border-bottom: 1px solid $tree-folder-link-color;
       color: $tree-folder-link-color;
-      padding-bottom: 1px;
-  //     text-decoration: none;
+      text-decoration: underline;
 
       svg {
         stroke: $tree-folder-link-color;
       }
-
     }
-
-    
 
     &:focus {
       border: 1px solid $tree-selected-color;
@@ -61,6 +56,7 @@
 
       &:hover {
         color: $tree-disabled-color;
+        text-decoration: none;
 
         svg {
           stroke: $tree-disabled-color;
@@ -90,8 +86,13 @@
 
   }
 
+  li {
+    margin-bottom: 15px;
+  }
+
   li.folder {
     position: relative;
+    // margin-bottom: 5px;
 
     > a {
       color: $tree-folder-link-color;
@@ -100,12 +101,15 @@
 
   // Selected State
   li.is-selected {
+
     a {
       color: #333333;
     }
 
     > a {
       color: $tree-selected-color;
+      text-decoration: none;
+
 
       svg {
         stroke: $tree-selected-color;
@@ -125,7 +129,7 @@
     left: 30px;
     overflow: hidden;
     position: relative;
-    padding-bottom: 8px;
+    // padding-bottom: 8px;
 
     a {
         margin: 0 0 0 14px;
@@ -145,7 +149,7 @@
       &:before {
         background-color: $tree-line-color;
         content: '';
-        height: calc(100% - 15px);
+        height: calc(100% - 22px);
         position: absolute;
         width: 1px;
       }
@@ -155,13 +159,13 @@
       ul:before {
         background-color: $tree-line-color;
         content: '';
-        height: calc(100% - 15px);
+        height: calc(100% - 22px);
         position: absolute;
         width: 1px;
       }
 
       li {
-        margin: 6px 0 0;
+        margin-top: 6px;
         position: relative;
       }
 
